--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,11 @@
   "manifest_version": 3,
   "name": "Pixel Ruler",
   "version": "1.0",
-  "permissions": ["activeTab", "scripting"],
+  "permissions": ["activeTab", "scripting", "storage"],
   "action": {
     "default_popup": "popup.html"
   },
+  
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
