--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,12 @@
 {
   "manifest_version": 3,
   "name": "Pixel Ruler",
+  "description": "Web page pixel ruler",
   "version": "1.0",
   "permissions": ["activeTab", "scripting", "storage"],
   "action": {
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "default_icon": "128.png"
   },
   
   "content_scripts": [
