--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,9 @@
     "default_popup": "popup.html",
     "default_icon": "128.png"
   },
-  
+  "background": {
+    "service_worker": "background.js"
+  },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
